SED-4574 adding instrument type, chart display type, improved dashboard presets, bug fixing